--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "react-scripts": "3.4.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set PORT=9000 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://localhost:3000/api/v1",
   "eslintConfig": {
     "extends": "react-app"
   },
